--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,17 +20,17 @@
   <body>
 
     <div class="container">
-      <!--{% include navbar.html %}-->
+      {% include navbar.html %}
 
       <section class="content">
         <div class="hero-unit">
-        <!--{{ content }}-->
+        {{ content }}
         </div>
 
       </section>
 
       <hr>
-      <!--{% include training.html %}-->
+      {% include training.html %}
       
     </div>
 
