--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <div class="masthead"><!--navbar-->
   <h3>Rutgers Triathlon Team</h3>
-  <div class="navbar">
+  <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
         <ul class="nav">
