--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-<style type="text/css">
 		* {
 			margin: 0;
 			padding: 0;
@@ -50,6 +49,41 @@
 			text-shadow: 0 2px 0 red , 0 0 10px black;
 			width: 700px;
 		}
+/*****************************
+  NAVBAR
+******************************/
+
+.navbar {
+  border: 0;
+  margin-bottom: 0;
+}
+
+.navbar-brand {
+  height: 80px;
+  padding: 10px;
+}
+
+.navbar-brand img {
+  display: inline-block;
+  width: 120px;
+  margin-top: 3px;
+}
+
+.navbar-nav li a {
+  color: #fff !important;
+  font-size: 1.25em;
+  line-height: 50px;
+  -o-transition: .1s ease-in-out;
+  -ms-transition: .1s ease-in-out;
+  -moz-transition: .1s ease-in-out;
+  -webkit-transition: .1s ease-in-out;
+  transition: .1s ease-in-out;
+}
+
+.navbar-nav li a:hover, .current-page {
+  box-shadow: inset 0px 5px 0px 0px;
+}
+		
 		.summer {
 			background-image: url(../resources/bannerpic1.jpg);
 		}
