--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,9 +1,9 @@
 <div class="masthead"><!--navbar-->
   <h3>Rutgers Triathlon Team</h3>
   <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
       <div class="container">
-        <ul class="nav">
+       <div class="navbar-header">
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="/index.html">Home</a></li>
           <li><a href="/join.html">Join</a></li>
           <li><a href="/sponsors.html">Sponsors</a></li>
