--- a/css/index.css
+++ b/css/index.css
@@ -70,7 +70,7 @@
 }
 
 .navbar-nav li a {
-  color: #fff !important;
+  color: #CC0000 !important;
   font-size: 1.25em;
   line-height: 50px;
   -o-transition: .1s ease-in-out;
