--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,7 @@
   <div class="navbar navbar-fixed-top">
       <div class="container">
        <div class="navbar-header">
-        <ul class="nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="/index.html">Home</a></li>
           <li><a href="/join.html">Join</a></li>
           <li><a href="/sponsors.html">Sponsors</a></li>
