--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,17 +1,23 @@
-<div class="masthead"><!--navbar-->
-  <h3>Rutgers Triathlon Team</h3>
-  <div class="navbar navbar-fixed-top">
-      <div class="container">
-       <div class="navbar-header">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/join.html">Join</a></li>
-          <li><a href="/sponsors.html">Sponsors</a></li>
-          <li><a href="/members.html">Members</a></li>
-          <li><a href="/news.html">News</a></li>
-          <li><a href="/contact.html">Contact</a></li>
-        </ul>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
       </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul id="nav-right" class="nav navbar-nav navbar-right">
+          <li><a href="">Home</a></li>
+          <li><a href="">Activities</a></li>
+          <li><a href="">Media</a></li>
+          <li><a href="">Who We Are</a></li>
+          <li><a href="">Testimonies</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div><!--/.navbar-collapse -->
     </div>
-  </div>
-</div>
+</nav>
