--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,23 +1,41 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul id="nav-right" class="nav navbar-nav navbar-right">
-          <li><a href="">Home</a></li>
-          <li><a href="">Activities</a></li>
-          <li><a href="">Media</a></li>
-          <li><a href="">Who We Are</a></li>
-          <li><a href="">Testimonies</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </div><!--/.navbar-collapse -->
-    </div>
-</nav>
+<!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Rutgers University Sprint Triathlon</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Course</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Info</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#team">Sponsors</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
