--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     {% include navbar.html %}
   </div>
   <div class="jumbotron">
-    <div class="container">
+    <div class=".container">
       <img src="img/rutgersTriathlonBanner.jpg">
     </div>
   </div>
