--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,11 @@
     <link rel="shortcut icon" href="../assets/ico/favicon.png">
   </head>
   <body>
-  <div class="container">
-    {% include navbar.html %}
-  </div>
   <div class="jumbotron">
     <div class=".container">
-      <img src="img/rutgersTriathlonBanner.jpg">
+      <div class="row">
+        <img src="img/rutgersTriathlonBanner.jpg">
+      </div>
     </div>
   </div>
 
