--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }} - Rutgers Triathlon Team</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="/css/index.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -18,29 +15,13 @@
     <link rel="shortcut icon" href="../assets/ico/favicon.png">
   </head>
   <body>
-  <div class="jumbotron">
-    <div class=".container">
-      <div class="row">
-        <img src="img/rutgersTriathlonBanner.jpg">
+    <div class="jumbotron">
+      <div class=".container">
+        <section class="bg-1 text-center">
+          <h1>Rutgers Triathlon Team</h1>
+          <p class="lead">information</p>
+        </section>
       </div>
     </div>
-  </div>
-
-
-	<!-- Java -->
-    <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap-transition.js"></script>
-    <script src="/js/bootstrap-alert.js"></script>
-    <script src="/js/bootstrap-modal.js"></script>
-    <script src="/js/bootstrap-dropdown.js"></script>
-    <script src="/js/bootstrap-scrollspy.js"></script>
-    <script src="/js/bootstrap-tab.js"></script>
-    <script src="/js/bootstrap-tooltip.js"></script>
-    <script src="/js/bootstrap-popover.js"></script>
-    <script src="/js/bootstrap-button.js"></script>
-    <script src="/js/bootstrap-collapse.js"></script>
-    <script src="/js/bootstrap-carousel.js"></script>
-    <script src="/js/bootstrap-typeahead.js"></script>
-
   </body>
 </html>
