Nav color changed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,13 +15,38 @@
     <link rel="shortcut icon" href="../assets/ico/favicon.png">
   </head>
   <body>
-    <div class="jumbotron">
-      <div class=".container">
-        <section class="bg-1 text-center">
-          <h1>Rutgers Triathlon Team</h1>
-          <p class="lead">information</p>
-        </section>
-      </div>
-    </div>
+    <section class="bg-1 text-center">
+      <h1>Rutgers Triathlon Team</h1>
+      <p class="lead">information</p>
+    </section>
+
+    <div class="container">
+      <hr>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-default">
+            <div class="panel-heading"><h3>Practice Schedule</h3></div>
+            <div class="panel-body">List of practices and location of practices</div>
+            <div class="panel-footer text-right"><a href="#" class="btn btn-default">More</a></div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-default">
+            <div class="panel-heading"><h3>Upcoming Races</h3></div>
+            <div class="panel-body">List of upcoming races</div>
+            <div class="panel-footer text-right"><a href="#" class="btn btn-default">More</a></div>
+          </div>
+        </div>
+          <div class="col-md-4">
+            <div class="panel panel-default">
+              <div class="panel-heading"><h3>Members?</h3></div>
+              <div class="panel-body"></div>
+              <div class="panel-footer text-right"><a href="#" class="btn btn-default">More</a></div>
+            </div>
+          </div>
+      </div><!--/row-->
+      <hr>
+    </div><!--/container-->
+  <div class="divider"/>
   </body>
 </html>
