--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,10 @@ section {
   color:#efefef;
 }
 
-.p p-header {
+.p parallaxParaHeader {
     color: #9E9E9E;
 }
 
-.h1 h1-header {
+.h1 parallaxHeaderColor {
     color: #607D8B;
 }
