--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,10 @@ section {
   color:#efefef;
 }
 
-.p parallaxParaHeader {
+.p {
     color: #9E9E9E;
 }
 
-.h1 parallaxHeaderColor {
+.h1 {
     color: #607D8B;
 }
