--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <section class="bg-1 text-center">
-      <h1 id="bannerText">Rutgers Triathlon Team</h1>
-      <p id="bannerSubText" class="lead">information</p>
+      <h1 >Rutgers Triathlon Team</h1>
+      <p class="lead">information</p>
     </section>
 
     <div class="container">
