Banner Color Changed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,8 @@
     <link rel="shortcut icon" href="../assets/ico/favicon.png">
   </head>
   <body>
-    <section class="bg-1 text-center">
+    <section class="bg-1">
       <h1 >Rutgers Triathlon Team</h1>
-      <p class="lead">information</p>
     </section>
 
     <div class="container">
