--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,16 @@
     <link rel="shortcut icon" href="../assets/ico/favicon.png">
   </head>
   <body>
+  <nav class="navbar navbar-inverse navbar-fixed-top navbar-left">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          <img alt="Brand" src="...">
+        </a>
+      </div>
+    </div>
+  </nav>
+
     <section class="bg-1">
       <h1 >Rutgers Triathlon Team</h1>
     </section>
