Banner Color Changed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,15 @@
   <nav class="navbar navbar-inverse navbar-fixed-top navbar-left">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-          <img alt="Brand" src="...">
-        </a>
+        <a class="navbar-brand" href="#">Rutgers Triathlon</a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav"> 
+          <li class="active"><a href="#">Home</a>
+          <li><a href="#">Members</a>
+          <li><a href="#">Training</a>
+          <li><a href="#">Other</a>
+        </ul>
       </div>
     </div>
   </nav>
