--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
   </head>
   <body>
   
+
+    <section class="bg-1">
     <!-- Static navbar -->
       <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -54,9 +56,7 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
-
-    <section class="bg-1"/>
-    
+    </section>
 
     <div class="container">
       <hr>
