--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,20 +8,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="https://pbs.twimg.com/profile_images/435070243036487681/6oVo5iT0.jpeg"/>
+      <a class="navbar-brand" href="index.html">Rutgers Triathlon</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-inverse">
         <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Join</a></li>
         <li><a href="#">Sponsors</a></li>
         <li><a href="#">Members</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
