--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-inverse">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-inverse">
         <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Join</a></li>
         <li><a href="#">Sponsors</a></li>
