--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <!-- <div class="container-fluid"> -->
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -8,11 +8,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Rutgers Triathlon</a>
+      <!-- <a class="navbar-brand" href="index.html">Rutgers Triathlon</a> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-inverse">
+    <div class="collapse navbar-collapse navbar-inverse navbar-right">
       <ul class="nav navbar-nav navbar-inverse">
         <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Join</a></li>
@@ -22,7 +22,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+  <!-- </div>/.container-fluid -->
 </nav>
 
 
