--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
   <body>
 
     {% include navbar.html %}
-    <section class="bg-1">
+    <section class="bg-1 text-center">
+      <h1>Rutgers Triathlon</h1>
     </section>
 
     <div class="container">
