--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-inverse navbar-right">
+    <div class="collapse navbar-collapse navbar-inverse navbar-right navbar-static-top">
       <ul class="nav navbar-nav navbar-inverse">
         <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Join</a></li>
