--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,8 +12,8 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-inverse navbar-right navbar-static-top">
-      <ul class="nav navbar-nav navbar-inverse">
+    <div class="collapse navbar-collapse navbar-inverse">
+      <ul class="nav navbar-nav navbar-inverse navbar-right">
         <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Join</a></li>
         <li><a href="#">Sponsors</a></li>
