--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
     {% include navbar.html %}
     <section class="bg-1 text-center">
-      <h1>Rutgers Triathlon</h1>
+      <h1><span class="red-font">Rutgers</span> Triathlon</h1>
     </section>
 
     <div class="container">
