--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,21 @@
 /************
+    GENERAL
+*************/
+
+h1 {
+  font-size: 3.5em;
+  font-weight: 300;
+}
+
+/************
+    Font
+*************/
+
+.red-font {
+  color: #be0000;
+}
+
+/************
     PARALLAX
 *************/
 .divider {
