--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
     {% include navbar.html %}
     <section class="bg-1 text-center">
       <h1><span class="red-font">Rutgers</span> Triathlon</h1>
+      <p class="lead">Swim <span class="red-font">Bike</span> Run</p>
     </section>
 
     <div class="container">
