--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,11 @@ section {
 
 .navbar-nav > li{
   padding-left:30px;
-  padding-right:30px;
+  padding-right:15px;
+}
+
+.navbar-nav {
+    padding-right: 20px;
 }
 
 .navbar-nav li a:hover, .current-page {
