Default css added

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="https://scontent-lga.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1551760_422214071242784_1529936983_n.png?oh=0bfc948e9f0bc438b1fcc6e1fc9efc6f&oe=558CFC62"></a>
+      <a class="navbar-brand" href="index.html"><img src="img/triathlonLogo"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
