--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="img/triathlonLogo"></a>
+      <a class="navbar-brand" href="index.html"><img src="img/triathlonLogo.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
