--- a/css/main.css
+++ b/css/main.css
@@ -98,3 +98,11 @@ section {
 .navbar-nav li a:hover, .current-page {
   box-shadow: inset 0px 5px 0px 0px;
 }
+
+.navbar .brand { 
+    max-height: 40px;
+    max-width: 30%; 
+    overflow: visible;
+    padding-top: 0;
+    padding-bottom: 0; 
+}
