--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,33 +12,14 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-inverse">
+    <div class="collapse navbar-collapse navbar-inverse id="bs-example-navbar-collapse-1"">
       <ul class="nav navbar-nav navbar-inverse navbar-right">
         <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Join</a></li>
-        <li><a href="#">Sponsors</a></li>
-        <li><a href="#">Members</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/index.html">Join</a></li>
+        <li><a href="/sponsors.html">Sponsors</a></li>
+        <li><a href="members.html">Members</a></li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="/contact.html">Contact</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
-  <!-- </div>/.container-fluid -->
 </nav>
-
-
-<!--navbar-->
-  <!-- <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-        <ul class="nav">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/join.html">Join</a></li>
-          <li><a href="/sponsors.html">Sponsors</a></li>
-          <li><a href="/members.html">Members</a></li>
-          <li><a href="/news.html">News</a></li>
-          <li><a href="/contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div> -->
