--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,8 @@
   <body>
 
     {% include navbar.html %}
-    <section class="bg-1 text-center">
-      <h1><span class="red-font">Rutgers</span> Triathlon</h1>
-      <p class="lead">Swim <span class="red-font">Bike</span> Run</p>
-    </section>
-
+    {% include parallaxDisplay.html %}
+    
     <div class="container">
       <hr>
       <div class="row">
