--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <!-- <div class="container-fluid"> -->
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -22,5 +22,5 @@
         <li><a href="/contact.html">Contact</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.navbar-fluid -->
+  <!-- </div>/.navbar-fluid -->
 </nav>
