--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,29 +18,27 @@
 
     {% include navbar.html %}
     {% include parallaxDisplay.html %}
-    
+
     <div class="container">
       <hr>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-5">
           <div class="panel panel-default">
             <div class="panel-heading"><h3>Practice Schedule</h3></div>
             <div class="panel-body">List of practices and location of practices</div>
-            <div class="panel-footer text-right"><a href="#" class="btn btn-default">More</a></div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5">
           <div class="panel panel-default">
             <div class="panel-heading"><h3>Upcoming Races</h3></div>
             <div class="panel-body">List of upcoming races</div>
-            <div class="panel-footer text-right"><a href="#" class="btn btn-default">More</a></div>
           </div>
         </div>
-          <div class="col-md-4">
+          <div class="col-md-5">
             <div class="panel panel-default">
-              <div class="panel-heading"><h3>Members?</h3></div>
-              <div class="panel-body"></div>
-              <div class="panel-footer text-right"><a href="#" class="btn btn-default">More</a></div>
+              <div class="panel-heading"><h3>Officers</h3></div>
+              <div class="panel-body">
+              </div>
             </div>
           </div>
       </div><!--/row-->
