--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
     <![endif]-->
-    <link rel="shortcut icon" href="../assets/ico/favicon.png">
+    <link rel="shortcut icon" href="img/triathlonLogo.png">
   </head>
   <body>
 
@@ -22,19 +22,19 @@
     <div class="container">
       <hr>
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-4">
           <div class="panel panel-default">
             <div class="panel-heading"><h3>Practice Schedule</h3></div>
             <div class="panel-body">List of practices and location of practices</div>
           </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-4">
           <div class="panel panel-default">
             <div class="panel-heading"><h3>Upcoming Races</h3></div>
             <div class="panel-body">List of upcoming races</div>
           </div>
         </div>
-          <div class="col-md-5">
+          <div class="col-md-4">
             <div class="panel panel-default">
               <div class="panel-heading"><h3>Officers</h3></div>
               <div class="panel-body">
