Commented closing div tags and added header color

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -4,22 +4,27 @@
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading"><h3>Practice Schedule</h3></div>
-        <div class="panel-body">List of practices and location of practices</div>
-      </div>
-    </div>
+        <div class="panel-body">
+          <ul class="list-group" id="PracticeList"/>
+        </div><!-- panelBody -->
+      </div><!-- panel -->
+    </div><!-- col -->
+    <div class="col-md-4">
+      <div class="panel panel-danger">
+        <div class="panel-heading"><h3>Upcoming Races</h3></div>
+        <div class="panel-body">
+          <ul class="list-group" id="RaceList"/>
+        </div><!-- panelBody -->
+      </div><!-- panel -->
+    </div><!-- col -->
     <div class="col-md-4">
       <div class="panel panel-default">
-        <div class="panel-heading"><h3>Upcoming Races</h3></div>
-        <div class="panel-body">List of upcoming races</div>
-      </div>
-      </div>
-      <div class="col-md-4">
-        <div class="panel panel-default">
-          <div class="panel-heading"><h3>Officers</h3></div>
-          <div class="panel-body">
-        </div>
-      </div>
-    </div>
+        <div class="panel-heading"><h3>Officers</h3></div>
+        <div class="panel-body">
+          <ul class="list-group" id="OfficerList"/>
+        </div><!-- panelBody -->
+      </div><!-- panel -->
+    </div><!-- col -->
   </div><!--/row-->
   <hr>
 </div><!--/container-->
