--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -11,7 +11,7 @@
     </div><!-- col -->
     <div class="col-md-4">
       <div class="panel panel-danger">
-        <div class="panel-heading"><h3>Upcoming Races</h3></div>
+        <div class="panel-heading"><h3 class="center-text">Upcoming Races</h3></div>
         <div class="panel-body">
           <ul class="list-group" id="RaceList"/>
         </div><!-- panelBody -->
