Commented closing div tags and added header color

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,4 +19,12 @@
     {% include parallaxDisplay.html %}
     {% include indexBottomPanel.html %}
   </body>
+
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
+  <script type="text/javascript">
+    var firebaseReference = new Firebase("https://rutgerstriteam.firebaseio.com/Practices");
+    firebaseReference.child("Monday").on("value", function(snapshot) {
+        alert(snapshot.val());
+    });
+  </script>
 </html>
