--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -6,6 +6,13 @@
         <div class="panel-heading"><h3>Practice Schedule</h3></div>
         <div class="panel-body">
           <ul class="list-group" id="PracticeList"/>
+            <li class="list-group-item" id="mondayPractice"/>
+            <li class="list-group-item" id="tuesdayPractice"/>
+            <li class="list-group-item" id="wednesdayPractice"/>
+            <li class="list-group-item" id="thursdayPractice"/>
+            <li class="list-group-item" id="fridayPractice"/>
+            <li class="list-group-item" id="saturdayPractice"/>
+            <li class="list-group-item" id="sundayPractice"/>
         </div><!-- panelBody -->
       </div><!-- panel -->
     </div><!-- col -->
