--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     {% include indexBottomPanel.html %}
   </body>
 
-  <script src="jquery-2.1.3.min.js"/>
+  <script src="js/jquery-2.1.3.min.js"/>
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"/>
   <script type="text/javascript">
     function retrieveAndPopulatePracticeData(){
