--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   <script src="js/jquery-2.1.3.min.js"/>
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"/>
   <script type="text/javascript">
-    function retrieveAndPopulatePracticeData(){
+    $(document).ready(){
       /** VAR Initialization **/
       var firebaseReference = new Firebase("https://rutgerstriteam.firebaseio.com/Practices");
       var mondayPracticeData = "";
@@ -66,7 +66,5 @@
 
       /* NOTE : if the practice data never returns then the data will remain blank */
     }
-    retrieveAndPopulatePracticeData();
-
   </script>
 </html>
