--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"/>
-  <script type="text/javascript">
+  <script>
     var firebaseReference = new Firebase("https://rutgerstriteam.firebaseio.com/Practices");
-      firebaseReference.child("Monday").on("value", function(snapshot) {
+      firebaseReference.on("value", function(snapshot) {
         alert(snapshot.val());
       });
   </script>
