--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   </body>
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
-  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"/>
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script type="text/javascript">
     var firebaseReference = new Firebase("https://rutgerstriteam.firebaseio.com/Practices");
       firebaseReference.on("value", function(snapshot) {
