Firebase being changed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,11 +36,10 @@
       /** VAR collection and view population from firebase **/
       firebaseReference.child("Monday").on("value", function(snapshot) {
         mondayPracticeData = snapshot.val();
-        alert(mondayPracticeData);
       });
       firebaseReference.child("Tuesday").on("value", function(snapshot) {
         tuesdayPracticeData = snapshot.val();
-        $('tuesdayPractice').val(tuesdayPracticeData);
+        $("#tuesdayPractice").val(tuesdayPracticeData);
       });
       firebaseReference.child("Wednesday").on("value", function(snapshot) {
         wednesdayPracticeData = snapshot.val();
