--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -7,7 +7,7 @@
         <div class="panel-body">
           <ul class="list-group" id="PracticeList"/>
             <li class="list-group-item" id="mondayPractice"></li>
-            <li class="list-group-item" id="tuesdayPractice"/>
+            <li class="list-group-item" id="tuesdayPractice"></li>
             <li class="list-group-item" id="wednesdayPractice"/>
             <li class="list-group-item" id="thursdayPractice"/>
             <li class="list-group-item" id="fridayPractice"/>
