--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,35 +36,8 @@
       /** VAR collection and view population from firebase **/
       firebaseReference.on("value", function(snapshot) {
         practiceData = snapshot.val();
-        alert(practiceData.Monday); 
-        alert(practiceData.Tuesday); 
-        alert(practiceData.Wednesday); 
+        $("#PracticeList").append("<li class=\"list-group-item\">"+practiceData.Tuesday+"</li>");
       });
-      firebaseReference.child("Tuesday").on("value", function(snapshot) {
-        tuesdayPracticeData = snapshot.val();
-        $("#tuesdayPractice").append(tuesdayPracticeData);
-        alert(tuesdayPracticeData);
 
-      });
-      firebaseReference.child("Wednesday").on("value", function(snapshot) {
-        wednesdayPracticeData = snapshot.val();
-        $('wednesdayPractice').val(wednesdayPracticeData);
-      });
-      firebaseReference.child("Thursday").on("value", function(snapshot) {
-        thursdayPracticeData = snapshot.val();
-        $('thursdayPractice').val(thursdayPracticeData);
-      });
-      firebaseReference.child("Friday").on("value", function(snapshot) {
-        fridayPracticeData = snapshot.val();
-        $('fridayPractice').val(fridayPracticeData);
-      });
-      firebaseReference.child("Saturday").on("value", function(snapshot) {
-        saturdayPracticeData = snapshot.val();
-        $('saturdayPractice').val(saturdayPracticeData);
-      });
-      firebaseReference.child("Sunday").on("value", function(snapshot) {
-        sundayPracticeData = snapshot.val();
-        $('sundayPractice').val(sundayPracticeData);
-      });
   </script>
 </html>
