--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
   <script src="js/jquery-2.1.3.min.js"/>
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script type="text/javascript">
-    $(document).ready(){
+    $(document).ready()
+    {
         /** VAR Initialization **/
       var firebaseReference = new Firebase("https://rutgerstriteam.firebaseio.com/Practices");
       /** VAR collection and view population from firebase **/
