--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -30,3 +30,16 @@
   <hr>
 </div><!--/container-->
 <div class="divider"/>
+
+
+  <script src="js/jquery-2.1.3.min.js"/>
+  <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
+  <script type="text/javascript">
+        /** VAR Initialization **/
+      var firebaseReference = new Firebase("https://rutgerstriteam.firebaseio.com/Practices");
+      /** VAR collection and view population from firebase **/
+      firebaseReference.on("value", function(snapshot) {
+        practiceData = snapshot.val();
+        $('#PracticeList').append("<li class=\"list-group-item\">"+practiceData.Tuesday+"</li>");
+      });
+  </script>
