--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,8 @@
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script type="text/javascript">
         /** VAR Initialization **/
+      var listItemPrefix = "class=\"list-group-item\"",listItemPostFix="</li>"
+
       var firebaseReference = new Firebase("https://rutgerstriteam.firebaseio.com/Practices");
 
       /** VAR collection and view population from firebase **/
@@ -31,7 +33,7 @@
         practiceData = snapshot.val();
         alert(practiceData.Monday); 
         // alert(practiceData.Tuesday);  
-        document.getElementById("PracticeList").innerHTML = "<li>"+practiceData.Tuesday+"</li>";
+        document.getElementById("PracticeList").innerHTML = listItemPrefix.concat(practiceData.Tuesday,listItemPostFix);
       });
   </script>
 </html>
