--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,6 @@
   <script src="js/firebase.js"></script>
   <script type="text/javascript">
    retrieveAndPopulatePracticeData();
+   retrieveAndPopulateOfficerData();
   </script>
 </html>
