Members page started

--- a/_layouts/membersLayout.html
+++ b/_layouts/membersLayout.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     {% include navbar.html %}
-    {% inclide memberList.html %}
+    {% include membersList.html %}
   </body>
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
