Card styling added

--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,10 @@ section {
       float: right;
     }
 
+    .center {
+      text-align: center;
+    }
+
 /************
     NAVBAR
 *************/
