Replaced current banner with placeholder

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ section {
 }
 
 .bg-1 {
-	background: url('/img/rutgersTriathlonBanner.jpg') no-repeat center center fixed;
+	background: url('/img/placeholder.png') no-repeat center center fixed;
     color:#fff;
     background-size:cover;
 }  
