--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
     <![endif]-->
-    <link rel="shortcut icon" href="/img/placeholder.png">
+    <link rel="shortcut icon" href="img/triathlonLogo.png">
   </head>
   <body>
     {% include navbar.html %}
