--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,7 +19,8 @@
         <!-- <li id="sponsorsNavBarItem"><a href="/sponsors.html">Sponsors</a></li> -->
         <li id="membersNavBarItem"><a href="members.html">Members</a></li>
         <!-- <li id="newsNavBarItem"><a href="news.html">News</a></li> -->
-        <li id="contactNavBarItem"><a href="/contact.html">Contact</a></li>
+        <!-- <li id="contactNavBarItem"><a href="/contact.html">Contact</a></li> -->
+        <li id="aboutUsNavBarItem"><a href="/aboutUs.html">About Us</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   <!-- </div>/.navbar-fluid -->
