--- a/_includes/parallaxDisplay.html
+++ b/_includes/parallaxDisplay.html
@@ -1,4 +1,5 @@
 <section class="bg-1 text-center">
+	{% include carouselDisplay.html %}
     <h1><span class="red-font">Rutgers</span> Triathlon</h1>
 	<p class="lead">Swim <span class="red-font">Bike</span> Run</p>
 </section>
