Adjusting carousel height and width

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,9 @@ h1 {
     margin-top: 5px;
 }
 .carousel .item img{
-    margin: 0 auto; /* Align slide image horizontally center */
+    margin: 0 auto;
+    height: 600px;
+    width: 80%;
 }
 
 /************
