Adding in about us information

--- a/_includes/aboutContent.html
+++ b/_includes/aboutContent.html
@@ -1,6 +1,50 @@
 <div class="container-fluid top-buffer" id="aboutContainer">
-	<img src="../img/aboutusimage.jpg" class="img-responsive col-md-offset-1" alt="Responsive image">
-	<br/>
-	<h2 class="col-md-10 col-md-offset-2" >We are currently under construction please check back later!</h2>
-	<br/><br/>
+
+	<!-- Coaching Panel -->
+	<div class="panel panel-info">
+  		<div class="panel-heading">Coach Sean Reilly</div>
+  		<div class="panel-body">
+    		<div class="media">
+    			<div class="media-left">
+    				<img class="media-object member-image" src="/img/aboutUsCoach.jpg"/>
+    			</div>
+    		</div>
+  		</div>
+	</div>
+
+	<!-- Biking -->
+	<div class="panel panel-info">
+  		<div class="panel-heading">General Club Information</div>
+  		<div class="panel-body">
+    		<div class="media">
+    			<div class="media-left">
+    				<img class="media-object member-image" src="/img/aboutUsCanon.jpg"/>
+    			</div>
+    		</div>
+  		</div>
+	</div>
+
+	<!-- General Practice -->
+	<div class="panel panel-info">
+  		<div class="panel-heading">Practice Makes Perfect!</div>
+  		<div class="panel-body">
+    		<div class="media">
+    			<div class="media-left">
+    				<img class="media-object member-image" src="/img/aboutUsSwimming.jpg"/>
+    			</div>
+    		</div>
+  		</div>
+	</div>
+
+	<!-- ExtraC -->
+	<div class="panel panel-info">
+  		<div class="panel-heading">Extracurricular</div>
+  		<div class="panel-body">
+    		<div class="media">
+    			<div class="media-left">
+    				<img class="media-object member-image" src="/img/aboutUsSnowboarding.jpg"/>
+    			</div>
+    		</div>
+  		</div>
+	</div>
 </div>
