Removed styling and left justified the images in the about view

--- a/_includes/aboutContent.html
+++ b/_includes/aboutContent.html
@@ -17,7 +17,7 @@
   		<div class="panel-heading">General Club Information</div>
   		<div class="panel-body">
     		<div class="media">
-    			<div class="media-left">
+    			<div class="media-right">
     				<img class="media-object member-image" src="/img/aboutUsCanon.jpg"/>
     			</div>
     		</div>
@@ -41,7 +41,7 @@
   		<div class="panel-heading">Extracurricular</div>
   		<div class="panel-body">
     		<div class="media">
-    			<div class="media-left">
+    			<div class="media-right">
     				<img class="media-object member-image" src="/img/aboutUsSnowboarding.jpg"/>
     			</div>
     		</div>
